changed the design layout so the bottom border padding is 7rem, making it slightly under the max image size. This fixed the overlapping issue when screen is full. Changed the div_col_2_of_3 to 66.667% to avoid possible issues there.

--- a/styles/design.css
+++ b/styles/design.css
@@ -77,7 +77,7 @@ p {
 
 p.instructor {
   margin:3rem;
-  padding-bottom: 4rem;
+  padding-bottom: 7rem;
 }
 
 ul {
