--- a/styles/layout.css
+++ b/styles/layout.css
@@ -9,6 +9,7 @@
 div.row {
       width: 100%;
       margin: auto;
+      clear: both;
 }
 
 div.row:after {
@@ -19,8 +20,6 @@ div.row:after {
   
 [class^='col_']  {
     float: left;
-  /*  background-color: #99FFCC;
-    border: 1px solid black;*/
     padding: .5rem;
 }
 
@@ -35,7 +34,7 @@ div.row:after {
   div.col_3_of_4 {width: 75%}
 
   div.col_1_of_3 {width: 33.333%}
-  div.col_2_of_3 {width: 66.66666%}
+  div.col_2_of_3 {width: 66.667%}
 
 /*End Box Layout stylings*/
 
